@@ -630,6 +630,7 @@
  *                         ap_check_request_header()
  * 20200420.0 (2.5.1-dev)  Add flags to listen_rec in place of use_specific_errors
  * 20200420.1 (2.5.1-dev)  Add ap_filter_adopt_brigade()
+ * 20200420.2 (2.5.1-dev)  Add ap_proxy_worker_can_upgrade()
  */
 
 #define MODULE_MAGIC_COOKIE 0x41503235UL /* "AP25" */
@@ -637,7 +638,7 @@
 #ifndef MODULE_MAGIC_NUMBER_MAJOR
 #define MODULE_MAGIC_NUMBER_MAJOR 20200420
 #endif
-#define MODULE_MAGIC_NUMBER_MINOR 1            /* 0...n */
+#define MODULE_MAGIC_NUMBER_MINOR 2            /* 0...n */
 
 /**
  * Determine if the server's current MODULE_MAGIC_NUMBER is at least a
